# py-borderless-games-and-apps

./: .gitignore  README.md  blacklist.json  main.py  pyproject.toml  requirements.txt
scripts/: build_exe.py  clear_release_by_error.py  create_release.py  release_version.py
src/: settings.py
src/utils/: settings.py  updater.py
