[project]
name = "py-borderless-games-and-apps"
version = "0.2.0"
description = "A simple tool to make any window borderless. Perfect for games and applications that don't support borderless windowed mode natively."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.0.0",
    "pyinstaller>=6.13.0",
    "pywin32>=310",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "ttkbootstrap>=1.12.2",
]
